corrected github project name, updated jersey libraries to 1.19, removed commons-codec